--- a/css/main.css
+++ b/css/main.css
@@ -11,3 +11,19 @@
 *,::before,::after{
   box-sizing: border-box;
 }
+body{
+  font-family: 'Rubik';
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.8;
+  color: var(--white);
+  background-color: #543c52;
+}
+a{
+  text-decoration: none;
+  color: inherit;
+}
+img{
+  max-width: 100%;
+  vertical-align: middle;
+}
