--- a/css/main.css
+++ b/css/main.css
@@ -104,6 +104,34 @@ img{
   font-size: 24px;
   font-weight: 300;
 }
+.products .item .addtocart button{
+  position: relative;
+  height: 50px;
+  border: 0;
+  outline: 0;
+  margin-right: -30px;
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  color: var(--white);
+  background-color: transparent;
+  cursor: pointer;
+}
+.products .item .addtocart button::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  background-color: var(--primary);
+}
+.products .item .addtocart button i{
+  color: var(--white);
+  padding-right: 12px;
+  margin-left: 24px;
+  z-index: 10;
+}
 @media screen and (min-width: 568px) {
   .products .item .image{
     transition: transform .3s;
